Fixed Course List page layout issue (updated courses.scss) #202

--- a/changelog.txt
+++ b/changelog.txt
@@ -34,4 +34,7 @@ v5.6.1
 
 v5.6.2
 - Updated State Web Template Google Analytics code
-- Added line-hight property to the headings
+- Added line-height property to the headings
+- Fixed News Blocks page layout issue
+- Fixed Course List page layout issue (updated courses.scss)
+- Removed broken link on Layouts landing page
