--- a/changelog.txt
+++ b/changelog.txt
@@ -38,3 +38,4 @@ v5.6.2
 - Fixed News Blocks page layout issue
 - Fixed Course List page layout issue (updated courses.scss)
 - Removed broken link on Layouts landing page
+- Fixed broken link to Events page that was in Layouts landing page
