Changed changelog file type to markdown

--- a/changelog.txt
+++ b/changelog.txt
@@ -40,7 +40,7 @@ v5.6.2
 
 - Updated the Google Analytics code. #189
 - Added line-height properties to the headings. #190
-- Fixed the page layout issue for the new blocks component. #201
+- Fixed the page layout issue for the news blocks component. #201
 - Fixed the page layout issue for the course list page (updated courses.scss). #202
 - Removed a broken link on the Layouts landing page. #200
 - Fixed a broken link to the Events page on the Layouts landing page. #203
